--- a/style.css
+++ b/style.css
@@ -101,3 +101,17 @@ align-items: center;
   opacity: .6;
 }
 
+@media(max-width:500px){
+  #main{
+    flex-direction: column;
+  }
+
+  #main #left{
+    width: 100%;
+
+  }
+  #main #right{
+    width: 100%;
+    
+  }
+}
